testsuite/tests/gadt/records-fail1.stderr

records-fail1.hs:7:1: error:
    Constructors T1 and T4 have a common field ‘x’,
      but have different result types
    In the data type declaration for ‘T’
